# rustlytodo

./: Cargo.toml  todos-export.json  todos.csv
src/: lib.rs  main.rs
src/app/: context.rs  errors.rs  mod.rs  query.rs  repository.rs  seed.rs  service.rs  store.rs
src/domain/: errors.rs  mod.rs  todo.rs
src/infra/: config.rs  csv_io.rs  db_schema.rs  fs_repo.rs  memory_repo.rs  mod.rs  paths.rs
src/ui/: cli.rs  mod.rs
tests/: cli_smoke.rs  list_filters.rs
