[package]
name = "rustytodo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde", "parsing", "formatting"] }
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.24.0"
